tests/fixtures/type_checker/error/detect_name_collision_local_global_2.galaxy
void detect_name_collision_local_global_l1()
{
}

void detect_name_collision_local_global_l2()
{
    int detect_name_collision_local_global_l1 = 1;
}
